id and enum lists in entities and value objects supported